spacing fixes

--- a/assets/sass/wrappers.sass
+++ b/assets/sass/wrappers.sass
@@ -2,7 +2,7 @@
   padding: 20px 0
 
 section
-  margin: 140px 0
+  margin: 100px 0
   margin-top: 20px
 
 .section-headers
@@ -95,6 +95,7 @@ section
       flex-direction: column
       h3
         margin-top: 0
+        margin-bottom: 0
       .article-img-container
         padding: 0 20px
       .article-header
@@ -107,6 +108,7 @@ section
         justify-content: center
         align-items: center
         border-radius: 10px
+        margin-bottom: 20px
         .big
           font-size: 40px
           margin-bottom: 10px
@@ -135,3 +137,7 @@ section
         margin: auto 20px
         line-height: 1.5em
         font-size: 1.5rem
+
+.claim-info, .features-wrapper
+  a
+    margin-top: 20px
